# astrbot-plugin-ygo-card-query

./: .gitignore  CODE_WIKI.md  DEPLOYMENT_SUMMARY.md  MODELSCOPE_DEPLOY.md  README.md  __init__.py  card_query.py  card_query_core.py  check_card.py  check_link_monsters.py  deploy.bat  deploy.sh  main.py  mcp_config_example.json  mcp_server.py  merge_summary.md  metadata.yaml  pyproject.toml  requirements.txt  test_card_query.py  test_mcp.py  test_mcp_service.py  test_simple.py  test_streamable_http.py
config/: config_windows.yaml  mcp_config.yaml  plugin_config.yaml
scripts/: deploy.bat  deploy.sh
src/: deploy_config.json  pyproject.toml
src/config/: deployment_config.json  mcp_config_example.json  modelscope_mcp_client_config.json  modelscope_mcp_config.json  streamable_http_config.json
src/core/: config.py
src/plugins/: astrbot_plugin.py  main.py
src/ygo_card_query/config/: config.yaml  mcp_config_example.json
src/ygo_card_query/mcp/: __init__.py  mcp_server.py
src/ygo_card_query/plugins/: __init__.py
src/ygo_mcp/: deploy.bat  deploy.sh  http_server.py  mcp_server.py  server.py
src/ygopro_database/: card_extra.db
test/: test_http_service.py  test_mcp_service.py  test_uvx_deployment.py
tests/: test_card_query.py
ygo_card_query/: __init__.py
ygo_card_query/config/: mcp_config_example.json
ygo_card_query/core/: __init__.py  card_query.py  config.py
ygo_card_query/mcp/: server.py
ygo_card_query/plugins/: astrbot_plugin.py  metadata.yaml
ygopro-database/: analyze_card_types.py
